crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/storage_layout_base_slot/constant_initialized_from_cast/generated/solc/0.8.31-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 1505] Error: The base slot expression contains elements that are not yet supported by the internal constant evaluator and therefore cannot be evaluated at compilation time.
   ╭─[input.sol:7:22]
   │
 7 │ contract C layout at x {}
   │                      ┬  
   │                      ╰── Error occurred here.
───╯
